added <span> tag to hide extra caption on the button (mobile version)

--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -59,6 +59,12 @@ body {
     height: 128px;
 }
 
+.container-button span {
+    display: none;
+}
+
 .button-transparent {
     margin-left: 0px;
 }
+
+
