--- a/styles/style.css
+++ b/styles/style.css
@@ -69,6 +69,7 @@ body * {
     color: #FFFFFF;
 }
 
+/* ---------------------header-------------------------------------- */
 .header {
     background: black;
 }
@@ -89,7 +90,7 @@ body * {
     color: #E3B873;
 }
 
-.header-navigation {
+.navigation {
     list-style: none;
     display: flex;
 }
@@ -121,12 +122,12 @@ body * {
     color: #E3B873;
 }
 
+/* ----------------------------hero---------------------------------- */
 .hero {
     background-image: url('../images/hero.jpg');
     background-size: cover;
     height: 707px;
     padding-top: 194px;
-    
     position: relative;
 }
 
@@ -140,23 +141,27 @@ body * {
     background-color: rgba(0, 0, 0, 0.7);
 }
 
-.hero-container {
+.hero-content {
     padding-left: 42px;
     position: relative;
     z-index: 1;
 }
 
-.main-title span {
+.hero__title {
+    width: 519px;
+}
+
+.hero__title span {
     color: #E3B873;
 }
 
-.main-text {
+.hero__text {
     margin-top: 19px;
     width: 504px;
-    text-align: justify;
+    text-align: letf;
 }
 
-.container-button {
+.hero__buttons {
     display: flex;
     margin-top: 22px;
 }
@@ -166,3 +171,129 @@ body * {
     border: 1px solid white;
     margin-left: 20px;
 }
+
+/* ---------------------completed-------------------------------------- */
+.completed {
+    background-color: #000;
+}
+
+.completed-content {
+    padding-top: 107px;
+    padding-right: 43px;
+    padding-bottom: 414.72px;
+    padding-left: 42px;
+}
+
+.completed-navigation {
+    margin-top: 0;
+    padding-left: 0;
+    margin-right: 56px;
+    margin-left: 494px;
+    margin-bottom: 45.36px;
+    width: 623px;
+}
+
+.completed-navigation__item {
+    margin-left: 60.5px;
+    height: 24px;
+}
+
+.completed-navigation__item:first-child {
+    margin-left: 0;
+}
+
+.completed-navigation__item {
+    font-family: 'Yeseva One';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 19px;
+    text-transform: uppercase;
+    color: rgba(255, 255, 255, 0.3);
+    text-decoration: none;
+}
+
+.completed-navigation__item.active {
+    color: #E3B873;
+    border-bottom:1px #E3B873 solid;
+}
+/* больше по высоте на 10,62px надо разобраться почему */
+.completed__main-block { 
+    display: flex;
+    justify-content: space-between;
+} 
+
+.completed__text {
+    display: flex;
+    flex-direction: column;
+}
+
+.completed__text__descr__title {
+    font-size: 27px;
+    line-height: 37px;
+    letter-spacing: -0.07em;
+    color: #E3B873;
+    width: 253px;
+    margin-top: 0;
+    margin-bottom: 23px;
+}
+
+.completed__text__descr_p {
+    font-size: 14px;
+    line-height: 27px;
+    width: 442px;
+    text-align: left;
+    margin-bottom:48px;
+}
+
+.completed-flex-container {
+    display: flex;
+    max-width: 403px;
+    height: 73px;
+}
+
+.row1 {
+    margin-bottom: 34px;
+}
+
+.row2 {
+    margin-bottom: 44px;
+}
+
+.completed-flex-item {
+    margin-right: 29px;
+}
+
+.column1 {
+    width: 185px;
+}
+
+.column2 {
+    width: 213px;
+}
+
+.completed-flex-item h3 {
+    font-family: 'Yeseva One';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 25px;
+    text-transform: uppercase;
+    color: #E3B873;
+    margin-top: 0;
+    margin-bottom: 9px;
+}
+
+.completed-flex-item div {
+    font-size: 13px;
+    line-height: 21px;
+    width: 100px;
+}
+
+/* .copleted__text__arrow { */
+    /*  */
+/* } */
+
+
+
+
