--- a/styles/style.css
+++ b/styles/style.css
@@ -180,7 +180,7 @@ body * {
 .completed-content {
     padding-top: 107px;
     padding-right: 43px;
-    padding-bottom: 414.72px;
+    padding-bottom: 403px;
     padding-left: 42px;
 }
 
@@ -290,10 +290,25 @@ body * {
     width: 100px;
 }
 
-/* .copleted__text__arrow { */
-    /*  */
-/* } */
+.completed__text__arrow {
+    padding-top: 8px;
+    display: inline-block;
+}
 
+.arrow-left {
+    margin-right: 23.5px;
+}
 
+.dot2 {
+ margin-right: 9.5px;
+ margin-left: 9.5px;
+}
 
+.arrow-right {
+    margin-left: 23.5px;
+}
 
+.completed__text__arrow .active {
+    background-color: white;
+    border-radius:50%;
+}
