--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,364 @@
+/* ------------------------------normalize------------------------------------------ */
+/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
+
+/* Document
+   ========================================================================== */
+
+/**
+ * 1. Correct the line height in all browsers.
+ * 2. Prevent adjustments of font size after orientation changes in iOS.
+ */
+
+ html {
+    line-height: 1.15; /* 1 */
+    -webkit-text-size-adjust: 100%; /* 2 */
+  }
+  
+  /* Sections
+     ========================================================================== */
+  
+  /**
+   * Remove the margin in all browsers.
+   */
+  
+  body {
+    margin: 0;
+  }
+  
+  /**
+   * Render the `main` element consistently in IE.
+   */
+  
+  main {
+    display: block;
+  }
+  
+  /**
+   * Correct the font size and margin on `h1` elements within `section` and
+   * `article` contexts in Chrome, Firefox, and Safari.
+   */
+  
+  h1, h2, h3 {
+    font-size: 2em;
+    margin: 0.67em 0;
+
+  }
+  
+  /* Grouping content
+     ========================================================================== */
+  
+  /**
+   * 1. Add the correct box sizing in Firefox.
+   * 2. Show the overflow in Edge and IE.
+   */
+  
+  hr {
+    box-sizing: content-box; /* 1 */
+    height: 0; /* 1 */
+    overflow: visible; /* 2 */
+  }
+  
+  /**
+   * 1. Correct the inheritance and scaling of font size in all browsers.
+   * 2. Correct the odd `em` font sizing in all browsers.
+   */
+  
+  pre {
+    font-family: monospace, monospace; /* 1 */
+    font-size: 1em; /* 2 */
+  }
+  
+  /* Text-level semantics
+     ========================================================================== */
+  
+  /**
+   * Remove the gray background on active links in IE 10.
+   */
+  
+  a {
+    background-color: transparent;
+  }
+  
+  /**
+   * 1. Remove the bottom border in Chrome 57-
+   * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
+   */
+  
+  abbr[title] {
+    border-bottom: none; /* 1 */
+    text-decoration: underline; /* 2 */
+    text-decoration: underline dotted; /* 2 */
+  }
+  
+  /**
+   * Add the correct font weight in Chrome, Edge, and Safari.
+   */
+  
+  b,
+  strong {
+    font-weight: bolder;
+  }
+  
+  /**
+   * 1. Correct the inheritance and scaling of font size in all browsers.
+   * 2. Correct the odd `em` font sizing in all browsers.
+   */
+  
+  code,
+  kbd,
+  samp {
+    font-family: monospace, monospace; /* 1 */
+    font-size: 1em; /* 2 */
+  }
+  
+  /**
+   * Add the correct font size in all browsers.
+   */
+  
+  small {
+    font-size: 80%;
+  }
+  
+  /**
+   * Prevent `sub` and `sup` elements from affecting the line height in
+   * all browsers.
+   */
+  
+  sub,
+  sup {
+    font-size: 75%;
+    line-height: 0;
+    position: relative;
+    vertical-align: baseline;
+  }
+  
+  sub {
+    bottom: -0.25em;
+  }
+  
+  sup {
+    top: -0.5em;
+  }
+  
+  /* Embedded content
+     ========================================================================== */
+  
+  /**
+   * Remove the border on images inside links in IE 10.
+   */
+  
+  img {
+    border-style: none;
+  }
+  
+  /* Forms
+     ========================================================================== */
+  
+  /**
+   * 1. Change the font styles in all browsers.
+   * 2. Remove the margin in Firefox and Safari.
+   */
+  
+  button,
+  input,
+  optgroup,
+  select,
+  textarea {
+    font-family: inherit; /* 1 */
+    font-size: 100%; /* 1 */
+    line-height: 1.15; /* 1 */
+    margin: 0; /* 2 */
+  }
+  
+  /**
+   * Show the overflow in IE.
+   * 1. Show the overflow in Edge.
+   */
+  
+  button,
+  input { /* 1 */
+    overflow: visible;
+  }
+  
+  /**
+   * Remove the inheritance of text transform in Edge, Firefox, and IE.
+   * 1. Remove the inheritance of text transform in Firefox.
+   */
+  
+  button,
+  select { /* 1 */
+    text-transform: none;
+  }
+  
+  /**
+   * Correct the inability to style clickable types in iOS and Safari.
+   */
+  
+  button,
+  [type="button"],
+  [type="reset"],
+  [type="submit"] {
+    -webkit-appearance: button;
+  }
+  
+  /**
+   * Remove the inner border and padding in Firefox.
+   */
+  
+  button::-moz-focus-inner,
+  [type="button"]::-moz-focus-inner,
+  [type="reset"]::-moz-focus-inner,
+  [type="submit"]::-moz-focus-inner {
+    border-style: none;
+    padding: 0;
+  }
+  
+  /**
+   * Restore the focus styles unset by the previous rule.
+   */
+  
+  button:-moz-focusring,
+  [type="button"]:-moz-focusring,
+  [type="reset"]:-moz-focusring,
+  [type="submit"]:-moz-focusring {
+    outline: 1px dotted ButtonText;
+  }
+  
+  /**
+   * Correct the padding in Firefox.
+   */
+  
+  fieldset {
+    padding: 0.35em 0.75em 0.625em;
+  }
+  
+  /**
+   * 1. Correct the text wrapping in Edge and IE.
+   * 2. Correct the color inheritance from `fieldset` elements in IE.
+   * 3. Remove the padding so developers are not caught out when they zero out
+   *    `fieldset` elements in all browsers.
+   */
+  
+  legend {
+    box-sizing: border-box; /* 1 */
+    color: inherit; /* 2 */
+    display: table; /* 1 */
+    max-width: 100%; /* 1 */
+    padding: 0; /* 3 */
+    white-space: normal; /* 1 */
+  }
+  
+  /**
+   * Add the correct vertical alignment in Chrome, Firefox, and Opera.
+   */
+  
+  progress {
+    vertical-align: baseline;
+  }
+  
+  /**
+   * Remove the default vertical scrollbar in IE 10+.
+   */
+  
+  textarea {
+    overflow: auto;
+  }
+  
+  /**
+   * 1. Add the correct box sizing in IE 10.
+   * 2. Remove the padding in IE 10.
+   */
+  
+  [type="checkbox"],
+  [type="radio"] {
+    box-sizing: border-box; /* 1 */
+    padding: 0; /* 2 */
+  }
+  
+  /**
+   * Correct the cursor style of increment and decrement buttons in Chrome.
+   */
+  
+  [type="number"]::-webkit-inner-spin-button,
+  [type="number"]::-webkit-outer-spin-button {
+    height: auto;
+  }
+  
+  /**
+   * 1. Correct the odd appearance in Chrome and Safari.
+   * 2. Correct the outline style in Safari.
+   */
+  
+  [type="search"] {
+    -webkit-appearance: textfield; /* 1 */
+    outline-offset: -2px; /* 2 */
+  }
+  
+  /**
+   * Remove the inner padding in Chrome and Safari on macOS.
+   */
+  
+  [type="search"]::-webkit-search-decoration {
+    -webkit-appearance: none;
+  }
+  
+  /**
+   * 1. Correct the inability to style clickable types in iOS and Safari.
+   * 2. Change font properties to `inherit` in Safari.
+   */
+  
+  ::-webkit-file-upload-button {
+    -webkit-appearance: button; /* 1 */
+    font: inherit; /* 2 */
+  }
+  
+  /* Interactive
+     ========================================================================== */
+  
+  /*
+   * Add the correct display in Edge, IE 10+, and Firefox.
+   */
+  
+  details {
+    display: block;
+  }
+  
+  /*
+   * Add the correct display in all browsers.
+   */
+  
+  summary {
+    display: list-item;
+  }
+  
+  /* Misc
+     ========================================================================== */
+  
+  /**
+   * Add the correct display in IE 10+.
+   */
+  
+  template {
+    display: none;
+  }
+  
+  /**
+   * Add the correct display in IE 10.
+   */
+  
+  [hidden] {
+    display: none;
+  }
+  /* ---------------------------------------------------------------------------------------------- */
+:root {
+    --basic: #E3B873;
+}
+
 @import url('https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital@0;1&display=swap');
 
 body {
     max-width: 1440px;
-    margin: 0;
     font-family: 'Nunito Sans', Arial, Helvetica, sans-serif;
     font-style: normal;
     font-weight: 400;
@@ -22,7 +377,7 @@ body * {
 }
 
 .button {
-    background: #E3B873;
+    background: var(--basic);
     box-shadow: 0px 5px 15px rgba(227, 184, 115, 0.2);
     border-radius: 2px;
     outline: 0;
@@ -44,13 +399,6 @@ body * {
     padding-bottom: 13px;
 }
 
-.button-main {
-    width: 207px;
-    height: 51px;
-    padding-top: 19px;
-    padding-bottom: 20px;
-}
-
 .title {
     margin: 0;
     font-family: 'Yeseva One', 'Times New Roman', Times, serif;
@@ -60,6 +408,27 @@ body * {
     line-height: 53px;
     text-transform: uppercase;
     color: #FFFFFF;
+}
+
+.subtitle {
+    font-family: 'Yeseva One';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 28px;
+    text-align: center;
+    text-transform: uppercase;
+    color: #181818;
+}
+
+.overlay {
+    content:'';
+    position:absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.7);
 }
 
 /* ---------------------header and footer-------------------------------------- */
@@ -135,16 +504,6 @@ body * {
     position: relative;
 }
 
-.hero-overlay {
-    content:'';
-    position:absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(0, 0, 0, 0.7);
-}
-
 .hero-content {
     padding-left: 42px;
     position: relative;
@@ -168,6 +527,13 @@ body * {
 .hero__buttons {
     display: flex;
     margin-top: 22px;
+}
+
+.button-main {
+    width: 207px;
+    height: 51px;
+    padding-top: 19px;
+    padding-bottom: 20px;
 }
 
 .button-transparent {
@@ -294,7 +660,7 @@ body * {
     width: 100px;
 }
 
-.completed__text__arrow {
+.completed__text__arrows {
     padding-top: 8px;
     display: inline-block;
 }
@@ -303,9 +669,21 @@ body * {
     margin-right: 23.5px;
 }
 
-.dot2 {
- margin-right: 9.5px;
- margin-left: 9.5px;
+.dot {
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    background: rgba(255, 255, 255, 0.3);
+    border-radius: 30px;
+}
+
+.completed__text__arrows > .active {
+    background-color: #fff;
+}
+
+.dot-center {
+ margin-right: 12.54px;
+ margin-left: 12.54px;
 }
 
 .arrow-right {
@@ -324,14 +702,14 @@ body * {
     margin: -326px auto 147.85px auto;
 }
 
-.subtitle {
-    text-align:center;
+.control__subtitle {
+    margin-bottom: 13px;
 }
 
-.subtitle__text {
-    font-size: 20px;
-    line-height: 28px;
-    margin-bottom: 13px;
+h3.subtitle-style {
+    color: #fff;
+    font-weight: bold;
+    margin-top: 0;
 }
 
 .subtitle__flex-container {
@@ -363,8 +741,82 @@ body * {
     margin-top: -69px;
 }
 
-.label {
+.control__text hr {
+    text-align: center;
+    color: #E3B873;
+    background-color:#E3B873;
+    width: 55px;
+    height: 1.54px;
+    border: none;
+    margin-top: 62.5px;
+    margin-bottom:29px;
+}
+
+.control__text {
+    width: 681px;
+    margin: 0 auto 79px auto;
+}
+
+.control__text p {
+    font-size: 18px;
+    line-height: 37px;
+    text-align: center;
+    color: #363636;
+}
+
+.control__form {
+    display: flex;
+    justify-content: space-between;
+    width: 769px;
+    height: 51px;
+    margin: 0 24px;
+}
+
+.control__form label {
+    display:block;
+    font-size: 13px;
+    line-height: 21px;
+    color: rgba(54, 54, 54, 0.5);
+}
+
+.control__form input {
+    display: block;
+    border:none;
+    border-bottom: 1px solid rgba(54, 54, 54, 0.3);
+    padding-bottom: 2px;
+}
+
+.control__form input[placeholder] {
+    font-size: 14px;
+    line-height: 23px;
+    color: #363636;
+}
+
+.button-form {
+    width: 200px;
+    height: 51px;
+    /* padding: 20px 75px; */
+    font-style: normal;
+    font-size: 13px;
+    line-height: 27px;
+}
+
+.control__checkbox {
+    height: 36px;
+    width: 285.62px;
+    margin: 33.24px 265.69px 147.85px 265.69px;
+}
+
+.control__checkbox .label {
     cursor: pointer;
+    font-size: 14px;
+    line-height: 23px;
+    color: #181818;
+}
+
+label.label {
+    display: block;
+    height: 18px;
 }
 
 .checkbox {
@@ -391,41 +843,48 @@ body * {
 }
 
 /* --------------------types-------------------------------- */
-.text {
-    font-size: 14px;
-    line-height: 163.68%;
-/* or 23px */
-    color: #181818;
+.types {
+    margin-bottom: 230px;
 }
 
-.subtitle__text-color {
-    color: #000;
+.subtitle__style-types {
+    font-weight: bold;
 }
 
 .types__row {
     display: flex;
     justify-content: space-between;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 124px;
 }
 
 .types__subtitle {
     font-size: 18px;
+    font-weight: bold;
     line-height: 25px;
     color:  #363636;
-}
-
-.types__image {
-
-    margin-bottom: -127px;
+    margin-bottom: 7px;
+    text-transform: none;
 }
 
 .types__row__item__text {
+    position: relative;
+    margin-top: -138px;
     margin-right: 31px;
-    margin-left:31px;
+    margin-left: 31px;
+    padding-top: 23px;
     padding-left: 34px;
-    background-color: rgb(31, 161, 27);
+    background-color: #fff;
 }
 
-.types__row__item__text li {
+.types__row__item ul {
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-left: 18px;
+}
+
+.types__row__item li {
     font-size: 13px;
     line-height: 27px;
     color: #959595;
@@ -436,7 +895,199 @@ body * {
     height: 54px;
     background: #E3B873;
     box-shadow: 5px 5px 10px rgba(227, 184, 115, 0.3);
-    padding: 17px 21.44px;
+    padding: 17px 25px;
     font-size: 18px;
     line-height: 25px;
+    margin-top: 15px;
+    margin-left: -33px;
+    font-weight: bold;
 }
+
+.measurer {
+    background-image: url('../images/grayHouse.jpg');
+    background-position: cover;
+    padding-left: 147px;
+    padding-right: 8px;
+}
+
+.measurer__flex-row {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 106px;
+    
+}
+
+.measurer__flex-column {
+    display:flex;
+    flex-direction: column;    
+}
+
+.measurer__flex-column__flex-item-row {
+    display: flex;
+    align-items: center;
+    margin-bottom: 84px;
+}
+
+.measurer__flex-column__flex-item-row:last-child {
+    margin-bottom: 47px;
+}
+
+.style {
+    width: 60px;
+    height: 60px;
+    background: #E3B873;
+    border: 8px solid #FFFFFF;
+    box-shadow: 0px 5px 15px rgba(227, 184, 115, 0.15);
+    border-radius: 30px;
+    padding: 10px;
+    font-size: 18px;
+    line-height: 25px;
+    text-align: center;
+    color: #FFFFFF;
+    display: inline-block;
+    margin-right: 9px;
+}
+
+.measurer__text  {
+    font-size: 14px;
+    line-height: 19px;
+    color: #363636;
+    width: 320px;
+}
+
+.measurer__form {
+    width: 506px;
+    height: 509px;
+    background-color: #000;
+}
+
+.measurer__form > p {
+    font-size: 18px;
+    line-height: 26px;
+    text-align: center;
+    padding: 28px 104.5px 39px;
+    margin: 0;
+}
+
+.measurer__form label {
+    font-size: 13px;
+    line-height: 21px;
+    color: rgba(255, 255, 255, 0.5);
+}
+
+.measurer__form form {
+    padding:0 49px 27px;
+}
+
+.measurer__form input {
+    width: 100%;
+    font-size: 14px;
+    line-height: 23px;
+/* identical to box height */
+    color: #FFFFFF;
+    opacity:0;
+    border:none;
+    border-bottom:1px solid white;
+}
+
+.measurer__form input[placeholder] {
+    color: #FFFFFF;
+}
+
+.measurer__form .label {
+    margin-bottom:42px;
+}
+
+.button.measurer__button {
+    width: 213px;
+    height: 51px;
+    font-size: 13px;
+    line-height: 21px; 
+    margin-left: 195px; 
+}
+
+.piggy_bank {
+    display: flex;
+    justify-content: flex-start;
+    align-items:center;
+    width: 340px;
+    height: 72px;
+    margin-top: 20px;
+    margin-left: 612px;
+}
+
+.piggy_bank > p {
+    margin-top: 0px;
+    margin-bottom: 0;
+    color:var(--basic);
+    font-size: 18px;
+    line-height: 26px;
+    text-shadow: 0px 3px 10px rgba(227, 184, 115, 0.15);
+}
+/* ---------------------------fantasies------------------ */
+.fantasies {
+    background-image: url(../images/bg_fantasies.jpg);
+    background-size: cover;
+    position: relative;
+    margin-bottom: 110.5px;
+}
+
+.fantasies-content {
+    padding-left:7px;
+    padding-right: 10px;
+    position: relative;
+    z-index: 1;
+}
+
+.fantasies__flex-row {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;  
+    height: 864px;
+}
+
+.fantasies__flex-column {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.fantasies__column1 {
+    padding-top: 137.47px;
+    padding-bottom: 94.54px;
+    width: 346px;
+}
+
+.fantasies__column1 > h4 {
+    margin-top: 0;
+    margin-bottom: 0;
+    font-size: 27px;
+    line-height: 37px;
+    text-transform: uppercase;
+    color: var(--basic);
+    font-weight: bold;
+    text-align:start;
+}
+
+.fantasies__column1 ul {
+    list-style: none;
+    margin-top: 37px;
+    padding-left: 0;
+}
+
+.fantasies__column1 li {
+    margin-bottom: 13.5px;
+}
+
+.fantasies__column2 {
+    margin-top: -40.5px;
+    margin-left: 104px;
+}
+
+.fantasies__column3 {
+    margin-top: -112.5px;
+    margin-bottom: 83.5px;
+}
+
+
+
