--- a/styles/style.css
+++ b/styles/style.css
@@ -166,7 +166,7 @@
   textarea {
     font-family: inherit; /* 1 */
     font-size: 100%; /* 1 */
-    line-height: 1.15; /* 1 */
+    /* line-height: 1.15; 1 */
     margin: 0; /* 2 */
   }
   
@@ -349,13 +349,13 @@
   [hidden] {
     display: none;
   }
+
   /* ---------------------------------------------------------------------------------------------- */
 :root {
     --basic: #E3B873;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital@0;1&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital@0;1&display=swap'); */
 
 body {
     max-width: 1440px;
@@ -401,13 +401,13 @@ body * {
 
 .title {
     margin: 0;
-    font-family: 'Yeseva One', 'Times New Roman', Times, serif;
+    font-family: 'Yeseva One', 'Times New Roman', serif;
     font-style: normal;
-    font-weight: 400;
-    font-size: 40px;
-    line-height: 53px;
+    font-weight: bold;
+    font-size: 27px;
+    line-height: 37px;
     text-transform: uppercase;
-    color: #FFFFFF;
+    color: var(--basic);
 }
 
 .subtitle {
@@ -453,7 +453,7 @@ body * {
     font-size: 11px;
     line-height: 15px;
     text-transform: uppercase;
-    color: #E3B873;
+    color: var(--basic);
 }
 
 .navigation {
@@ -479,20 +479,20 @@ body * {
 }
 
 .header-navigation__item a:hover {
-    color: #E3B873;
+    color: var(--basic);
 }
 
 .footer-navigation__item a:hover {
-    color: #E3B873;
+    color: var(--basic);
 }
 
-.phone {
+a.phone {
     font-style: normal;
     font-weight: 400;
     font-size: 11px;
     line-height: 15px;
     text-align: right;
-    color: #E3B873;
+    color: var(--basic);
 }
 
 /* ----------------------------hero---------------------------------- */
@@ -500,7 +500,7 @@ body * {
     background-image: url('../images/hero.jpg');
     background-size: cover;
     height: 707px;
-    padding-top: 194px;
+    padding-top: 191px;
     position: relative;
 }
 
@@ -512,21 +512,24 @@ body * {
 
 .hero__title {
     width: 519px;
+    font-size: 40px;
+    line-height: 53px;
+    color: #fff;
 }
 
 .hero__title span {
-    color: #E3B873;
+    color: var(--basic);
 }
 
 .hero__text {
     margin-top: 19px;
-    width: 504px;
+    width: 505px;
     text-align: letf;
 }
 
 .hero__buttons {
     display: flex;
-    margin-top: 22px;
+    margin-top: 23px;
 }
 
 .button-main {
@@ -584,8 +587,8 @@ body * {
 }
 
 .completed-navigation__item.active {
-    color: #E3B873;
-    border-bottom:1px #E3B873 solid;
+    color: var(--basic);
+    border-bottom:1px var(--basic) solid;
 }
 
 .completed__main-block { 
@@ -598,12 +601,9 @@ body * {
     flex-direction: column;
 }
 
-.completed__text__descr__title {
-    font-size: 27px;
-    line-height: 37px;
-    letter-spacing: -0.07em;
-    color: #E3B873;
+.completed__text__descr__title {    
     width: 253px;
+    letter-spacing: -0.07em;
     margin-top: 0;
     margin-bottom: 23px;
 }
@@ -614,6 +614,10 @@ body * {
     width: 442px;
     text-align: left;
     margin-bottom:48px;
+}
+
+.completed-image-mobile {
+    display: none;
 }
 
 .completed-flex-container {
@@ -643,15 +647,13 @@ body * {
 }
 
 .completed-flex-item h3 {
-    font-family: 'Yeseva One';
-    font-style: normal;
-    font-weight: 400;
     font-size: 18px;
     line-height: 25px;
     text-transform: uppercase;
-    color: #E3B873;
+    color: var(--basic);
     margin-top: 0;
     margin-bottom: 9px;
+    text-align: left;
 }
 
 .completed-flex-item div {
@@ -663,6 +665,7 @@ body * {
 .completed__text__arrows {
     padding-top: 8px;
     display: inline-block;
+    width: 208px;
 }
 
 .arrow-left {
@@ -682,8 +685,8 @@ body * {
 }
 
 .dot-center {
- margin-right: 12.54px;
- margin-left: 12.54px;
+ margin-right: 12px;
+ margin-left: 12px;
 }
 
 .arrow-right {
@@ -697,17 +700,17 @@ body * {
 
 /* ----------------------control------------------- */
 .control {
-    width: 817px;
+    max-width: 817px;
     height: 955.15px;
     margin: -326px auto 147.85px auto;
 }
 
 .control__subtitle {
-    margin-bottom: 13px;
+    margin-bottom: 31.21px;
 }
 
 h3.subtitle-style {
-    color: #fff;
+    color: #FFFFFF;
     font-weight: bold;
     margin-top: 0;
 }
@@ -716,7 +719,6 @@ h3.subtitle-style {
     display: flex;
     justify-content: center;
     align-items:center;
-    margin-bottom: 31.21px;
 }
 
 .centerElem {
@@ -741,20 +743,20 @@ h3.subtitle-style {
     margin-top: -69px;
 }
 
+.control__text {
+    width: 681px;
+    margin: 0 auto 79px auto;
+}
+
 .control__text hr {
     text-align: center;
-    color: #E3B873;
-    background-color:#E3B873;
+    color: var(--basic);
+    background-color: var(--basic);
     width: 55px;
     height: 1.54px;
     border: none;
     margin-top: 62.5px;
     margin-bottom:29px;
-}
-
-.control__text {
-    width: 681px;
-    margin: 0 auto 79px auto;
 }
 
 .control__text p {
@@ -779,14 +781,18 @@ h3.subtitle-style {
     color: rgba(54, 54, 54, 0.5);
 }
 
-.control__form input {
+.control__form label span.num {
+    display: none;
+}
+
+.control__form input.input {
     display: block;
     border:none;
     border-bottom: 1px solid rgba(54, 54, 54, 0.3);
-    padding-bottom: 2px;
+    padding-bottom: 5px;
 }
 
-.control__form input[placeholder] {
+.control__form input::placeholder {
     font-size: 14px;
     line-height: 23px;
     color: #363636;
@@ -795,28 +801,28 @@ h3.subtitle-style {
 .button-form {
     width: 200px;
     height: 51px;
-    /* padding: 20px 75px; */
     font-style: normal;
     font-size: 13px;
     line-height: 27px;
 }
 
+.control__form .label {
+    display: none;
+}
+
 .control__checkbox {
     height: 36px;
     width: 285.62px;
-    margin: 33.24px 265.69px 147.85px 265.69px;
-}
-
-.control__checkbox .label {
-    cursor: pointer;
-    font-size: 14px;
-    line-height: 23px;
-    color: #181818;
+    margin: 33.24px 265.69px 0;
 }
 
 label.label {
     display: block;
     height: 18px;
+    cursor: pointer;
+    font-size: 14px;
+    line-height: 23px;
+    color: #181818;
 }
 
 .checkbox {
@@ -827,9 +833,10 @@ label.label {
     display: inline-flex;
     width: 18px;
     height: 18px;
-    background: #E3B873;
+    background: var(--basic);
     color: #fff;
     justify-content: center;
+    margin-right: 4px;
 }
 
 .fake::before {
@@ -847,6 +854,10 @@ label.label {
     margin-bottom: 230px;
 }
 
+.types__subtitle {
+    margin-bottom: 31.21px;
+}
+
 .subtitle__style-types {
     font-weight: bold;
 }
@@ -859,15 +870,6 @@ label.label {
     margin-bottom: 124px;
 }
 
-.types__subtitle {
-    font-size: 18px;
-    font-weight: bold;
-    line-height: 25px;
-    color:  #363636;
-    margin-bottom: 7px;
-    text-transform: none;
-}
-
 .types__row__item__text {
     position: relative;
     margin-top: -138px;
@@ -876,6 +878,17 @@ label.label {
     padding-top: 23px;
     padding-left: 34px;
     background-color: #fff;
+    box-shadow: 5px 10px 20px rgba(0, 0, 0, 0.05);
+    padding-bottom: 43px;
+}
+
+.types__row__item-subtitle {
+    font-size: 18px;
+    font-weight: bold;
+    line-height: 25px;
+    color:  #363636;
+    margin-bottom: 7px;
+    text-transform: none;
 }
 
 .types__row__item ul {
@@ -891,33 +904,31 @@ label.label {
 }
 
 .price {
+    position: relative;
     width: 228px;
     height: 54px;
-    background: #E3B873;
+    background: var(--basic);
     box-shadow: 5px 5px 10px rgba(227, 184, 115, 0.3);
-    padding: 17px 25px;
+    padding: 15px 17px;
     font-size: 18px;
     line-height: 25px;
-    margin-top: 15px;
-    margin-left: -33px;
-    font-weight: bold;
+    margin-top: -27px;
+    margin-left: 33px;
+    font-weight: 400;
+    color: #fff;
 }
 
 .measurer {
-    background-image: url('../images/grayHouse.jpg');
-    background-position: cover;
-    padding-left: 147px;
     padding-right: 8px;
 }
 
 .measurer__flex-row {
     display: flex;
-    justify-content: space-between;
-    padding-top: 106px;
-    
 }
 
 .measurer__flex-column {
+    background-image: url("../images/grayHouse.jpg");
+    padding-top: 106px;
     display:flex;
     flex-direction: column;    
 }
@@ -926,6 +937,7 @@ label.label {
     display: flex;
     align-items: center;
     margin-bottom: 84px;
+    padding-left: 240px;
 }
 
 .measurer__flex-column__flex-item-row:last-child {
@@ -935,7 +947,7 @@ label.label {
 .style {
     width: 60px;
     height: 60px;
-    background: #E3B873;
+    background: var(--basic);
     border: 8px solid #FFFFFF;
     box-shadow: 0px 5px 15px rgba(227, 184, 115, 0.15);
     border-radius: 30px;
@@ -955,47 +967,60 @@ label.label {
     width: 320px;
 }
 
+.measurer__form-input {
+    width: 408px;
+    height: 244px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-bottom: 16px;
+}
+
 .measurer__form {
+    margin-top: 106px;
     width: 506px;
     height: 509px;
     background-color: #000;
+    margin-left: 205px;
 }
 
 .measurer__form > p {
     font-size: 18px;
     line-height: 26px;
     text-align: center;
-    padding: 28px 104.5px 39px;
+    padding: 28px 104.5px 35px;
     margin: 0;
-}
-
-.measurer__form label {
-    font-size: 13px;
-    line-height: 21px;
-    color: rgba(255, 255, 255, 0.5);
 }
 
 .measurer__form form {
     padding:0 49px 27px;
+}  
+
+.measurer__form-input label {
+    height: 50px;
+    font-size: 13px;
+    line-height: 21px;
+    color: rgba(255, 255, 255, 0.5);
+    /* margin-bottom:42px; */
 }
 
 .measurer__form input {
     width: 100%;
+    color: #FFFFFF;
+    background-color: black;
+    border: none;
+    border-bottom:1px solid rgba(255, 255, 255, 0.5);
+    padding-bottom: 2px;
+}
+
+.measurer__form input::placeholder {
     font-size: 14px;
     line-height: 23px;
-/* identical to box height */
-    color: #FFFFFF;
-    opacity:0;
-    border:none;
-    border-bottom:1px solid white;
-}
-
-.measurer__form input[placeholder] {
     color: #FFFFFF;
 }
 
-.measurer__form .label {
-    margin-bottom:42px;
+label.label-white {
+    color: #FFFFFF;
 }
 
 .button.measurer__button {
@@ -1003,7 +1028,9 @@ label.label {
     height: 51px;
     font-size: 13px;
     line-height: 21px; 
+    margin-top: 41px;
     margin-left: 195px; 
+    border-radius: 0;
 }
 
 .piggy_bank {
@@ -1013,11 +1040,11 @@ label.label {
     width: 340px;
     height: 72px;
     margin-top: 20px;
-    margin-left: 612px;
+    margin-left: 846.5px;
 }
 
 .piggy_bank > p {
-    margin-top: 0px;
+    margin-top: -11px;
     margin-bottom: 0;
     color:var(--basic);
     font-size: 18px;
@@ -1058,15 +1085,18 @@ label.label {
     width: 346px;
 }
 
+.arrows {
+    display: none;
+}
+
 .fantasies__column1 > h4 {
     margin-top: 0;
     margin-bottom: 0;
-    font-size: 27px;
-    line-height: 37px;
-    text-transform: uppercase;
-    color: var(--basic);
-    font-weight: bold;
     text-align:start;
+}
+
+.fantasies__column1 > img {
+    display: none;
 }
 
 .fantasies__column1 ul {
@@ -1076,18 +1106,231 @@ label.label {
 }
 
 .fantasies__column1 li {
-    margin-bottom: 13.5px;
+    margin-bottom: 11.4px;
+    font-size: 20px;
+    line-height: 38px;
+}
+
+.fantasies__column1 li:hover {
+    color: var(--basic);
 }
 
 .fantasies__column2 {
-    margin-top: -40.5px;
+    margin-top: -39.5px;
     margin-left: 104px;
 }
 
 .fantasies__column3 {
-    margin-top: -112.5px;
+    margin-top: -110.5px;
     margin-bottom: 83.5px;
+}
+/*---------------------clients--------------- */
+.clients {
+    background-color:aquamarine;
+    /* background-image: url('../images/hero.jpg'); */
+    background-size: cover;
+    /* height: 707px; */
+    width: 1440px;
+    /* background-position-x: 50%; */
+}
+.clients-content {
+    /* background-image: url("../images/Group-bg.jpg"); */
+    /* transform: matrix(-1, 0, 0, 1, 0, 0); */
+    padding:0 20px 224px 20px;
+}
+
+.clients__subtitle-p {
+    font-size: 18px;
+    line-height: 29px;
+    text-align: center;
+    color: #363636;
+    width: 370px;
+    margin: 0 auto;
+    padding-top: 21px;
+}
+
+.clients__row {
+    display: flex;
+    justify-content: space-between;
+    margin-left: 10px;
+    margin: 39px 10px 131px 10px;
+    padding-top: 24px;
+}
+
+.clients__row__item {
+    display: flex;
+    flex-direction: column;
+    width: 334px;
 }
 
 
+.clients__name {
+    display:flex;
+    align-items: center;
+    margin-bottom: 19px; 
+}
+
+.clients__subtitle {
+    font-size: 18px;
+    line-height: 23px; 
+    color: #181818;
+    margin-left: 24px;
+    text-transform: none;
+    text-align: left;
+}
+
+.clients__feedback-p {
+    margin-top: 0;
+    margin-bottom: 5px;
+    margin-right: 12px;
+    font-weight: 400;
+    font-size: 13px;
+    line-height: 180%;
+    color: #959595;
+}
+
+.block {
+    margin-top: 60px;
+    margin-left: -20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 294px;
+    height: 54px;
+    background-color: var(--basic);
+    padding-left: 16px;
+    padding-right: 24px;
+    box-shadow: 5px 5px 10px rgba(227, 184, 115, 0.3);
+}
+
+.block > .subtitle {
+    font-size: 17px;
+    line-height: 24px;
+    color: #FFFFFF;
+}
+
+/* ----------------------form------------------------ */
+.form {
+    background-color:aquamarine;
+    background-image: url('../images/bg-right.jpg');
+    margin-top: -222.66px;
+}
+.form__form {
+    width: 883px;
+    height: 445px;
+    background-color: #000;
+    margin: 0 268.3px 0 288.7px;
+}
+
+.form__form-subtitle {
+    color: #fff;
+    margin-top: 0;
+    margin-bottom: 46px;
+    padding-top: 33px;
+}
+
+.form__form form {
+    padding: 0 181.5px 34.4px;
+}
+
+.form__form > form > .form__form-flex-row {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    width: 520px;
+    height: 139px;
+    margin-bottom: 47px;
+    align-content: space-between;
+}
+
+.form__form label.label-item {
+    width: 231px;
+    height: 45px;
+    font-size: 13px;
+    line-height: 21px;
+    color: rgba(255, 255, 255, 0.5);
+}
+
+.form__form-flex-row input {
+    width: 100%;
+    background-color: #000;
+    color: #fff;
+    padding-bottom: 7px;
+    border:none;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.15);
+}
+
+.form__form input::placeholder {
+    color: #fff;
+} 
+
+.form__form label.form__form-lastInput {
+    width: 100%;
+}
+
+.form .label-white {
+    text-align: center;
+}
+
+.button.form__button {
+    width: 200px;
+    height: 51px;
+    font-style: normal;
+    font-size: 13px;
+    line-height: 27px; 
+    margin-top: 50px;
+    margin-left: 160px; 
+    padding-top:8px;
+}
+/* ------------------contacts----------------------------- */
+.contacts {
+    background-color: #000;
+    padding: 275px 260px 66px 255px;
+    margin-top: -222.66px;
+}
+
+.contacts__address {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    width: 589px;
+    height: 105px;
+    margin: 0 auto 43.29px;
+}
+
+.contacts__subtitle {
+    color: var(--basic);
+}
+
+.contacts__subtitle a {
+    color: var(--basic);
+    text-decoration: none;
+}
+
+.contacts__subtitle a:hover {
+    text-decoration: underline;
+}
+
+.contacts__image {
+    width: 71px;
+    height: 28px;
+}
+
+.contacts__image a {
+    text-decoration: none;
+}
+
+.contacts__image img[alt="icon-email"] {
+    margin-right: 9px;
+}
+
+.contacts__map-mobile {
+    display: none;
+}
+
+.contacts__map img {
+    height: 466px;
+    text-align: center;
+}
 
